Added Altar Crafting, Added Tools & Weapons.